<resources>
    <string name="app_name">Wallendar</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="activity">Activity</string>
    <string name="balances">Balances</string>
    <string name="profile">Profile</string>
    <string name="add_charge">Add Charge</string>
    <string name="add_charge_to">Add to</string>
    <string name="enter_description">Enter a description</string>
    <string name="charge_amount">Price</string>
    <string name="add_group">Add Group</string>
    <string name="enter_group_name">Enter group title</string>
    <string name="add_event">Add Event</string>
    <string name="enter_event_title">Enter event title</string>
    <string name="selected_date">Selected date is: </string>
    <string name="select_date">Select Date</string>
    <string name="select_a_date">Select a date</string>
    <string name="selected_time">Selected time is: </string>
    <string name="select_time">Select Time</string>
    <string name="select_a_time">Select a time</string>
    <string name="settle_up">Settle Up</string>
    <string name="reminder">Remind</string>

    <string name="user_paid_amount">%1$s paid $%2$s</string>
    <string name="user_paid_amount_to">%1$s paid $%2$s to %3$s</string>
    <string name="user_owes_you_amount">%1$s owes you $%2$s</string>
    <string name="you_owe_to_user_amount">You owe to %1$s $%2$s</string>
    <string name="user_owes_to_user_amount">%1$s owes to %2$s $%3$s</string>
    <string name="group_title">GROUP TITLE</string>
    <string name="members">Members</string>

    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="enter_email_and_password">Please enter email and password.</string>
    <string name="email_or_password_incorrect">Incorrect email or password.</string>
    <string name="register_failed">Sign Up failed.</string>

    <string name="fill_all_inputs">Please fill all the fields.</string>
    <string name="passwords_must_match">Passwords must match.</string>

    <string name="add_members">Add members</string>
    <string name="member_email">Member email</string>
    <string name="hint_email_member">Member email</string>
    <string name="submit_add_members_button">ADD MEMBERS</string>

    <string name="your_aliases">Your payments data</string>
    <string name="logout">Sign out</string>

    <string name="example_name">John Doe</string>
    <string name="example_email">johndoe@gmail.com</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>

    <string name="feature_not_ready">This feature is a work in progress.</string>

    <string name="settle_up_debt">Settle up debt</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="members_added_successful">Members added successfully.</string>

    <string name="group_name_template">Group name</string>
    <string name="you_are_owed_template">You are owed $1500.00</string>
    <string name="you_owe_template">You owe $1500.00</string>
    <string name="you_are_owed">You are owed $%1$s</string>
    <string name="you_owe">You owe $%1$s</string>

    <string name="failed_to_settle_up">Failed to settle up.</string>
    <string name="failed_to_load_debts">Failed to load debts.</string>
    <string name="failed_to_load_members">Failed to load members.</string>
    <string name="phone_number">Phone Number</string>
    <string name="remind_with">Remind</string>

    <string name="whatsapp_not_installed">WhatsApp is not installed!</string>
    <string name="pay_me_what_you_owe_me">Please pay me what you owe me: $%1$s</string>

    <string name="login_error">Error, sign in again please.</string>
    <string name="error_getting_groups">Error getting groups, try again later.</string>
    <string name="error_getting_balances">Error getting balances, try again later.</string>
    <string name="error_paying_debt">Error paying debt, try again later</string>
    <string name="failed_to_load_details">Failed to load debt details</string>

</resources>