<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/light_grey"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/row_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name_template"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_you_owe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_owe_template"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/row_you_are_owed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_owed_template"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>