<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_wallet_purple"

        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/text_signin_message"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="50dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="50dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_button_signin"
        style="@style/Button1"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/button_sign_in" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:id="@+id/login_button_signup"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/text_signin_signup"
        android:textColor="@color/black" />
</LinearLayout>