<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/text_signup_message"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="12dp"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/hint_firstname"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/hint_lastname"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="45dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="12dp"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:minWidth="320dp"
                android:minHeight="45dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="45dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorTextInputBackground"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="45dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/register_button_signin"
        style="@style/Button1"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/button_sign_up" />

    <TextView
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/text_signup_terms"
        android:textSize="13sp" />
</LinearLayout>